--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ pydantic-settings = "^2.3.1"
 pyjwt = "^2.8.0"
 passlib = "^1.7.4"
 bcrypt = "^4.1.3"
+fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
 
 
 [tool.poetry.group.dev.dependencies]
