--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ fastapi-cache2 = {extras = ["redis"], version = "^0.2.2"}
 celery = "^5.4.0"
 pillow = "^10.4.0"
 flower = "^2.0.1"
+sqladmin = "^0.18.0"
 
 
 [tool.poetry.group.dev.dependencies]
