--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,10 @@ celery = "^5.4.0"
 pillow = "^10.4.0"
 flower = "^2.0.1"
 sqladmin = "^0.18.0"
+pytest = "^8.3.2"
+pytest-asyncio = "^0.24.0"
+httpx = "^0.27.2"
+pytest-cov = "^5.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
