--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,11 @@ pytest = "^8.3.2"
 pytest-asyncio = "^0.24.0"
 httpx = "^0.27.2"
 pytest-cov = "^5.0.0"
+black = "^24.8.0"
+flake8 = "^7.1.1"
+isort = "^5.13.2"
+pyright = "^1.1.380"
+autoflake = "^2.3.1"
 
 
 [tool.poetry.group.dev.dependencies]
@@ -33,3 +38,20 @@ ipykernel = "^6.29.4"
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 100
+target-version = ['py312']
+
+[tool.isort]
+profile = "black"
+multi_line_output = 3
+include_trailing_comma = true
+force_grid_wrap = 0
+use_parentheses = true
+ensure_newline_before_comments = true
+line_length = 100
+
+[tool.autoflake]
+check_diff = true
+imports = ["sqlalchemy", "app"]
