--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,6 @@ fastapi = {extras = ["all"], version = "^0.111.0"}
 sqlalchemy = "^2.0.30"
 alembic = "^1.13.1"
 asyncpg = "^0.29.0"
-pydantic-settings = "^2.3.1"
 pyjwt = "^2.8.0"
 passlib = "^1.7.4"
 bcrypt = "^4.1.3"
@@ -30,6 +29,10 @@ flake8 = "^7.1.1"
 isort = "^5.13.2"
 pyright = "^1.1.380"
 autoflake = "^2.3.1"
+pre-commit = "^3.8.0"
+pydantic-settings = "2.3.1"
+python-json-logger = "^3.3.0"
+sentry-sdk = {extras = ["fastapi"], version = "^2.35.0"}
 
 
 [tool.poetry.group.dev.dependencies]
@@ -55,3 +58,7 @@ line_length = 100
 [tool.autoflake]
 check_diff = true
 imports = ["sqlalchemy", "app"]
+
+[tool.pyright]
+include = ["app"]
+reportMissingImports = false
