--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,6 +33,7 @@ pre-commit = "^3.8.0"
 pydantic-settings = "2.3.1"
 python-json-logger = "^3.3.0"
 sentry-sdk = {extras = ["fastapi"], version = "^2.35.0"}
+fastapi-versioning = "^0.10.0"
 
 
 [tool.poetry.group.dev.dependencies]
