--- a/pyproject.toml
+++ b/pyproject.toml
@@ -34,6 +34,7 @@ pydantic-settings = "2.3.1"
 python-json-logger = "^3.3.0"
 sentry-sdk = {extras = ["fastapi"], version = "^2.35.0"}
 fastapi-versioning = "^0.10.0"
+gunicorn = "^23.0.0"
 
 
 [tool.poetry.group.dev.dependencies]
